# se-toolkit-lab-8

./: .gitmodules  REPORT.md  docker-compose.yml  pyproject.toml
caddy/: Caddyfile
contributing/conventions/writing/: common.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-4.md
mcp/mcp_lms/: server.py
nanobot/: .dockerignore  Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/cron/: jobs.json
nanobot/nanobot_webchat/: __init__.py
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
wiki/: lab.md  vm.md
